--- a/python-interface/public/index.html
+++ b/python-interface/public/index.html
@@ -26,10 +26,10 @@
     -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-    <title>React App</title>
+    <title>HIRAX Layout DB</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
