--- a/web-interface/public/index.html
+++ b/web-interface/public/index.html
@@ -31,7 +31,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-    <title>HIRAX Layout DB</title>
+    <title>Padloper</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
